--- a/wdd330/week1/index.html
+++ b/wdd330/week1/index.html
@@ -40,6 +40,15 @@
                             <li>Local storage only supports strings, use JSON.stringify() and JSON.parse() to work with arrays</li>
                         </ul>
                     </li>
+                    <li>Github pages
+                        <ul>
+                            <li>Log in to Github and enter the repository</li>
+                            <li>Goto settings</li>
+                            <li>Click Pages under Options</li>
+                            <li>Under Source, click main (master) in the dropdown</li>
+                            <li>Make sure there is an index file in the directory</li>
+                        </ul>
+                    </li>                    
                 </ul>
             </li>
             <li>Questions
