--- a/wdd330/week1/index.html
+++ b/wdd330/week1/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>wdd330 Portfolio</title>
-    <meta name="description" content="My WDD330 Projects">
+    <meta name="description" content="Week 1">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
