--- a/cse340/enhancement1.html
+++ b/cse340/enhancement1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>cse340 enhancement1</title>
+    <title>cse340 assignment enhancement1</title>
     <style>
         html, body {
             margin: 0px;
