--- a/cse340/enhancement1.html
+++ b/cse340/enhancement1.html
@@ -9,6 +9,7 @@
         html, body {
             margin: 0px;
             height: 100%;
+            text-align: center;
         }
         body {
             display: grid;
