--- a/cse340/enhancement1.html
+++ b/cse340/enhancement1.html
@@ -15,6 +15,9 @@
             display: grid;
             grid-template-columns: 1fr;
         }
+        h1 {
+            font-size: 2em;
+        }
         video {
             margin-top:2em;
             margin-left: auto;
