--- a/wdd330/week1/index.html
+++ b/wdd330/week1/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1><a href="../">Home</a> | WDD330 Portfolio</h1>
+    <h1>WDD330 Portfolio</h1>
     <section class="weeklyItems">
-        <h2>Week 1</h2>
+        <h2><a href="../">Home</a> | Week 1</h2>
         <ul>
             <li>Notes
                 <ul>
