--- a/wdd330/week2/array.html
+++ b/wdd330/week2/array.html
@@ -110,7 +110,7 @@
     </script>
 </head>
 <body>
-    <h1><a href="../">Home</a> | <a href="../week2/">Week 2</a> | Arrays</h1>
+    <h1><a href="../week2/">Week 2</a> | Arrays</h1>
     <section id="lab">Check the console for output ...</section>
 </body>
 </html>
