--- a/wdd330/week3/index.html
+++ b/wdd330/week3/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1>WDD330 Portfolio</h1>
     <section class="weeklyItems">
-        <h2>Week 3</h2>
+        <h2><a href="../">Home</a> | Week 3</h2>
         <ul>
             <li>Notes
                 <ul>
@@ -36,7 +36,7 @@
                     <li><h3>this</h3></li>
                     <li>
                         <ul>
-                            <li>"<a href="https://zellwk.com/blog/this/" target="_blank" rel="noopener noreferrer">this</a>>" is a keyword whose value changes depending on how a function gets called
+                            <li>"<a href="https://zellwk.com/blog/this/" target="_blank" rel="noopener noreferrer">this</a>" is a keyword whose value changes depending on how a function gets called
                                 <ul>
                                     <li>global context - this defaults to the window object when called outside of a function</li>
                                     <li>object construction - refers to the instance of the new object</li>
@@ -223,8 +223,7 @@
             </li>
             <li>Exercises
                 <ul>
-                    <li></li>
-                    <li></li>
+                    <li><a href="filterMapSort.html">Filter, Map, Sort experimentation</a></li>
                 </ul>
             </li>
         </ul>
