--- a/wdd330/week1/localstorage.html
+++ b/wdd330/week1/localstorage.html
@@ -27,7 +27,7 @@
     </style>
 </head>
 <body>
-    <h1><a href="../">Home</a> | <a href="../week1/">Week 1</a> | Localstorage</h1>
+    <h1><a href="../week1/">Week 1</a> | Localstorage</h1>
     <section>
         <input id="breakfast">
         <button onclick="saveItem()"">What's for breakfast?</button>
