--- a/cse340/enhancement3.html
+++ b/cse340/enhancement3.html
@@ -35,6 +35,12 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    In the video, I forgot to show the consolidated css, but it's the same as last week, promise :)
+    In the video, I forgot to show the consolidated css, and the page size.  Below are screenshots for the login and registration pages.
+
+    <img src="images/logincss.png">
+    <img src="images/registercss.png">
+    <img src="images/login.png">
+    <img src="images/register.png">
+
 </body>
 </html>
