--- a/cse340/enhancement3.html
+++ b/cse340/enhancement3.html
@@ -36,11 +36,12 @@
         </video>
     </div>
     In the video, I forgot to show the consolidated css, and the page size.  Below are screenshots for the login and registration pages.
-
-    <img src="images/logincss.png">
-    <img src="images/registercss.png">
-    <img src="images/login.png">
-    <img src="images/register.png">
+    <ul>
+        <li><a href="images/logincss.png" target="blank">Login page - consolidated css</a></li>
+        <li><a href="images/registercss.png" target="blank">Registration page - consolidated css</a></li>
+        <li><a href="images/login.png" target="blank">Login page weight</a></li>
+        <li><a href="images/register.png" target="blank">Registration page weight</a></li>
+    </ul>
 
 </body>
 </html>
