--- a/cse340/enhancement3.html
+++ b/cse340/enhancement3.html
@@ -25,6 +25,9 @@
             display: block;
             width: 50%;
         }
+        li {
+            text-decoration: none;
+        }
     </style>
 </head>
 <body>
