--- a/cse340/enhancement3.html
+++ b/cse340/enhancement3.html
@@ -26,7 +26,7 @@
             width: 50%;
         }
         li {
-            text-decoration: none;
+            list-style-type: none;
         }
     </style>
 </head>
