--- a/cse340/enhancement3.html
+++ b/cse340/enhancement3.html
@@ -38,7 +38,7 @@
             Your browser does not support the video tag.
         </video>
     </div>
-    In the video, I forgot to show the consolidated css, and the page size.  Below are screenshots for the login and registration pages.
+    In the video, I forgot to show the consolidated css screen and the page size.  Below are screenshots for both.
     <ul>
         <li><a href="images/logincss.png" target="blank">Login page - consolidated css</a></li>
         <li><a href="images/registercss.png" target="blank">Registration page - consolidated css</a></li>
