--- a/wdd330/week4/index.html
+++ b/wdd330/week4/index.html
@@ -17,7 +17,7 @@
 <body>
     <h1>WDD330 Portfolio</h1>
     <section class="weeklyItems">
-        <h2>Week 4</h2>
+        <h2><a href="../">Home</a> | Week 4</h2>
         <ul>
             <li>Notes
                 <ul>
