--- a/wdd330/week5/index.html
+++ b/wdd330/week5/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>wdd330 Portfolio</title>
-    <meta name="description" content="Week 4">
+    <meta name="description" content="Week 5">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -17,7 +17,7 @@
 <body>
     <h1>WDD330 Portfolio</h1>
     <section class="weeklyItems">
-        <h2>Week 4</h2>
+        <h2><a href="../">Home</a> | Week 5</h2>
         <ul>
             <li>Notes
                 <ul>
