--- a/cse340/enhancement2.html
+++ b/cse340/enhancement2.html
@@ -29,9 +29,17 @@
 </head>
 <body>
     <h1>cse340 Enhancement 2</h1>
-    <div id="map">
+    <div>
         <video controls="controls autoplay">
             <source src="cse340enhancement2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
+    <h2>Updated SQL to use REPLACE</h2>
+    <div>
+        <video controls="controls autoplay">
+            <source src="cse340enhancement2Replace.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
