--- a/cse340/enhancement3.html
+++ b/cse340/enhancement3.html
@@ -32,7 +32,7 @@
 </head>
 <body>
     <h1>cse340 Enhancement 3</h1>
-    <div id="map">
+    <div>
         <video controls="controls autoplay">
             <source src="cse340enhancement3.mp4" type="video/mp4">
             Your browser does not support the video tag.
