--- a/cse340/enhancement1.html
+++ b/cse340/enhancement1.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <h1>cse340 Enhancement 1</h1>
-    <div id="map">
+    <div>
         <video controls="controls autoplay">
             <source src="cse340enhancement1.mp4" type="video/mp4">
             Your browser does not support the video tag.
