--- a/cse340/enhancement4.html
+++ b/cse340/enhancement4.html
@@ -38,6 +38,15 @@
             Your browser does not support the video tag.
         </video>
     </div>
+
+    <h2>Added clip to show server-side validation of vehicle page</h2>
+    <div>
+        <video controls="controls autoplay">
+            <source src="cse340enhancement2Validation.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
     In the <a href="https://youtu.be/1-u_Cveq6-w" target="_blank" rel="noopener noreferrer">video demo</a> for what this enhancement could look like, Brother Robertson never shows the account controller even though 
     setting up the registration page was part of this assignment.
 </body>
