--- a/wdd330/week5/objects.html
+++ b/wdd330/week5/objects.html
@@ -3,20 +3,41 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>wdd330 Portfolio</title>
-    <meta name="description" content="My WDD330 Projects">
+    <title>Objects</title>
+    <meta name="description" content="Object example">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Charm&family=Montserrat&display=swap">
-    <link rel="stylesheet" href="css/style.css">
-    <script defer src="js/main.js"></script>
+    <style>
+        /* DEVELOPMENT ONLY */
+        body {
+            font-size: 1.5em;
+        }
+        h1 {
+            background-color: aquamarine;
+            padding: 1em;
+        }
+        section {
+            margin-left: 1em;
+        }
+    </style>
 </head>
 <body>
-    <h1>WDD330 Portfolio</h1>
+    <h1><a href="../week5/">Week 5</a> | Objects</h1>
     <section>
-        <ol id="weekList"></ol>
+        <input id="breakfast">
+        <button onclick="saveItem()"">What's for breakfast?</button>
+        <br>
+        <ul id="menu"></ul>
     </section>
+
+    <script>
+        // DEVELOPMENT ONLY
+
+
+    </script>
+
 </body>
 </html>
