--- a/cse340/enhancement4.html
+++ b/cse340/enhancement4.html
@@ -47,7 +47,10 @@
         </video>
     </div>
 
-    In the <a href="https://youtu.be/1-u_Cveq6-w" target="_blank" rel="noopener noreferrer">video demo</a> for what this enhancement could look like, Brother Robertson never shows the account controller even though 
-    setting up the registration page was part of this assignment.
+    In the video, I didn´t have a path hard coded to point to the no image file.  I have since changed that and attached screenshot below:
+    <ul>
+        <li><a href="images/defaultpaths.png" target="blank">Default image and thumbnail path</a></li>
+    </ul>
+
 </body>
 </html>
