--- a/cse340/enhancement4.html
+++ b/cse340/enhancement4.html
@@ -47,7 +47,7 @@
         </video>
     </div>
 
-    In the video, I didn´t have a path hard coded to point to the no image file.  I have since changed that and attached screenshot below:
+    <p>In the video, I didn't have a path hard coded to point to the no image file.  I have since changed that and attached screenshot below:</p>
     <ul>
         <li><a href="images/defaultpaths.png" target="blank">Default image and thumbnail path</a></li>
     </ul>
