--- a/wdd330/week6/todo/index.html
+++ b/wdd330/week6/todo/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Special+Elite&family=Montserrat&display=swap">
     <link rel="stylesheet" href="styles.css">
-    <script defer src="main.js" type="module"></script>
+    <script src="main.js" type="module"></script>
 </head>
 <body>
     <div id="app">
