--- a/wdd330/week6/todo/index.html
+++ b/wdd330/week6/todo/index.html
@@ -24,7 +24,9 @@
             <span id="filterCompleted" class="filter">Completed</span>
         </div>
         <div id="addRow">
-            <input id="description" type="text">
+            <label for="description">
+                <input id="description" type="text">
+            </label>
             <button id="add">+</button>
         </div>
     </div>
