--- a/wdd330/week6/todo/index.html
+++ b/wdd330/week6/todo/index.html
@@ -24,9 +24,7 @@
             <span id="filterCompleted" class="filter">Completed</span>
         </div>
         <div id="addRow">
-            <label for="description">
-                <input id="description" type="text">
-            </label>
+            <input id="description" type="text" title="Task input">
             <button id="add">+</button>
         </div>
     </div>
