--- a/wdd330/week6/todo/index.html
+++ b/wdd330/week6/todo/index.html
@@ -24,7 +24,7 @@
             <span id="filterCompleted" class="filter">Completed</span>
         </div>
         <div id="addRow">
-            <input id="description" type="text" title="Task input">
+            <input id="description" type="text" title="Task description">
             <button id="add">+</button>
         </div>
     </div>
