--- a/wdd330/week6/todo/index.html
+++ b/wdd330/week6/todo/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Todo</title>
-    <meta name="description" content="Todo Activity List">
+    <title>Todo List</title>
+    <meta name="description" content="Keep of your activities">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -18,7 +18,7 @@
         <h1>Todo List</h1>
         <ul id="todos"><!-- add items here --></ul>
         <div id="filterRow">
-            <span id="numTasks">3 tasks left</span>
+            <span id="numTasks"><!-- num of incomplete tasks --></span>
             <span id="filterAll" class="filter selected">All</span>
             <span id="filterActive" class="filter">Active</span>
             <span id="filterCompleted" class="filter">Completed</span>
