--- a/cse340/regex.html
+++ b/cse340/regex.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>cse340 assignment enhancement2</title>
+    <title>Regular Expressions</title>
     <style>
         html, body {
             margin: 0px;
@@ -28,20 +28,17 @@
     </style>
 </head>
 <body>
-    <h1>cse340 Enhancement 2</h1>
+    <h1>Regular Expressions</h1>
     <div>
         <video controls="controls autoplay">
-            <source src="cse340enhancement2.mp4" type="video/mp4">
+            <source src="regex.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
 
-    <h2>Updated SQL to use REPLACE</h2>
+    <h2>Downloads</h2>
     <div>
-        <video controls="controls autoplay">
-            <source src="cse340enhancement2Replace.mp4" type="video/mp4">
-            Your browser does not support the video tag.
-        </video>
+	    <a href="darkarts.zip">Dark Arts - Regular Expressions practice app</a>
     </div>
 </body>
 </html>
