--- a/wdd230/index.html
+++ b/wdd230/index.html
@@ -14,10 +14,12 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Charm&family=Montserrat&display=swap">
     <style>
         body {
-            padding: 1em;
+            font-size: 1.5em;
         }
+
         h1 {
-            background-color: black;
+            background-color: aquamarine;
+            padding: 1em;
         }
     </style>
 </head>
