--- a/cse340/enhancement5.html
+++ b/cse340/enhancement5.html
@@ -38,5 +38,10 @@
             Your browser does not support the video tag.
         </video>
     </div>
+
+    In the video, I forgot to show the password hash in the database.
+    <ul>
+        <li><a href="images/hash.png" target="blank">Password hash</a></li>
+    </ul>    
 </body>
 </html>
