--- a/cse340/enhancement7.html
+++ b/cse340/enhancement7.html
@@ -39,5 +39,13 @@
         </video>
     </div>
  
+    This video shows logging out and logging in again after a password change.
+    <div>
+        <video controls="controls autoplay">
+            <source src="passwordUpdate.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
 </body>
 </html>
